apps/production/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  tls:
    - hosts:
        - dashboard-inner.dariomazza.net
      secretName: homepage-inner-tls
  rules:
    - host: "dashboard-inner.dariomazza.net"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
